--- a/admin-ecommerce/admin-be/config/config.json
+++ b/admin-ecommerce/admin-be/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "admin_commerce",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb",
+    "port": 3307
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "admin_commerce",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb",
+    "port": 3307
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "admin_commerce",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mariadb",
+    "port": 3307
   }
 }
